# MsytEditor

./: .gitignore  Util.py  main.py  pyproject.toml
editor/: FileHandling.py  JSFunctions.py  MsbtToJson.py  Util.py  genControlOptions.py  main.py  options.json
editor/assets/: Main.css  Main.js  MainWindow.html  options.json
tests/: Test.json  Test.msbt
